MDEV-4593: p_s: crash in simplify_joins with delete using subselect from view

mysql_derived_merge_for_insert() should not be called for views or derived tables which are not put (directly or via other views) in main SELECT_LEX "join list".